# ATS_System

./: .gitignore  ATS_details.xlsx  README.md  create_template.py  interface.py  main.py  pyproject.toml  requirements.txt  template.xlsx
